@@ -1,3 +1,8 @@
+Development Portal (2018-05-25 shi)
+==============================
+Fix table (list and activity) word break
+
+
 Development Portal (2018-05-16 shi)
 ==============================
 Updated 'outgoing commitments' text in table headers and footer
